<resources>
    <string name="app_name" translatable="false">Instify</string>
    <string name="all_ad_app_id" translatable="false">ca-app-pub-1515135859021344~5949146511
    </string>
    <string name="banner_ad_unit_test_id" translatable="false">
        ca-app-pub-3940256099942544/6300978111
    </string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-1515135859021344/6954228116
    </string>
    <string name="interstitial_ad_unit_test_id" translatable="false">
        ca-app-pub-3940256099942544/1033173712
    </string>
    <string name="interstitial_ad_unit_id" translatable="false">
        ca-app-pub-1515135859021344/1379346114
    </string>
    <string name="native_express_ad_unit_id" translatable="false">
        ca-app-pub-1515135859021344/7869970911
    </string>
    <string name="copy_right">Copyrights © %1$d</string>
    <string name="title_activity_intro">Thanks for downloading!</string>
    <string name="title_activity_splash">Made with &#10084; by Fnplus</string>
    <string name="title_activity_register">Register Yourself</string>
    <string name="title_activity_chat">Discuss</string>
    <string name="title_activity_profile">Your Profile</string>
    <string name="title_activity_fee_payment_history">Fee Payment History</string>
    <string name="title_activity_test_performance">Your Scores</string>
    <string name="title_activity_support_us">App is free but server is not!</string>
    <string name="title_activity_upload_notes">Post a new Note</string>
    <string name="title_activity_upload_campus">Post a new Update</string>
    <string name="imageView_edit">Change Default Image</string>
    <string name="nav_section_1">Navigate</string>
    <string name="nav_attendance">Attendance</string>
    <string name="nav_campus_news">Campus News</string>
    <string name="nav_univ_news">University News</string>
    <string name="nav_notes">Notes</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_section_2">Test Performance</string>
    <string name="nav_gpa_calculator">Calculate GPA</string>
    <string name="nav_test_scores">Test Scores</string>
    <string name="nav_section_3">Fee Payment</string>
    <string name="nav_fee_pay">Pay Fees</string>
    <string name="nav_fee_history">Fee Payment History</string>
    <string name="nav_section_4">General</string>
    <string name="nav_about">About</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_section_5">Communicate</string>
    <string name="nav_help_feedback">Help &amp; Feedback</string>
    <string name="nav_rate_us">Love Us? Rate Us!</string>
    <string name="nav_donate_us">Support Us</string>
    <string name="header_imageView_description">Placeholder text for image view description</string>
    <string name="header_unknown_user">Unknown User</string>
    <string name="No_network_connection">No network connection</string>
    <string name="Internal_error">Internal error, please try it later</string>
    <string name="Loading">Loading …</string>
    <string name="Retry">Retry</string>
    <string name="Ok">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Close">Close</string>
    <string name="Clear">Clear</string>
    <string name="Undo">Undo</string>
    <string name="Required_field">Required field</string>
    <string name="The_entries_must_match">The entries must match</string>
    <string name="Content_is_empty">Content is empty.</string>
    <string name="content_description_open_navigation_drawer">Open navigation drawer</string>
    <string name="content_description_close_navigation_drawer">Close navigation drawer</string>
    <string name="Another_click_for_leaving_app">Another click for leaving app</string>
    <string name="All_categories">All categories</string>
    <string name="menu_action_search">Search</string>
    <string name="Type_your_query">Type your query</string>
    <string name="menu_action_filter">Filter</string>
    <string name="no_network_connection_toast">No network connection found</string>
    <string name="hint_email">Your Email</string>
    <string name="login_image_description">Instify\'s logo image</string>
    <string name="hint_password">ERP\'s Password</string>
    <string name="hint_regNo">Registration Number</string>
    <string name="email">Email</string>
    <string name="and">AND</string>
    <string name="auth_failed">Authentication Failed. Try Again.</string>
    <string name="auth_success">Authentication Successful!</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Register and Login</string>
    <string name="msg_edit_box">Type a Message</string>
    <string name="msg_send">Send</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="camera_button_text">Upload</string>
    <string name="take_photo_prompt">Upload a Photo</string>
    <string name="download">Download</string>
    <string name="rationale_storage">Requesting access to the Storage</string>
    <string name="label_download">Download File</string>
    <string name="success">Success</string>
    <string name="progress_downloading">Downloading…</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="progress_auth">Signing In…</string>
    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>
    <string name="download_success">Download finished</string>
    <string name="download_failure">Download failure</string>
    <string name="title_settings_dialog">Permissions Required</string>
    <string name="rationale_camera">This app needs access to your camera so you can take pictures.
    </string>
    <string name="contacts_permission_rationale">"Contacts permissions are needed for providing
        email
        completions."
    </string>
    <string name="returned_from_app_settings_to_activity">Returned from app settings to
        MainActivity
    </string>
    <string-array name="campusUploadDeptArray">
        <item>Select Department</item>
        <item>IT</item>
        <item>CSE</item>
        <item>MECH</item>
        <item>CIVIL</item>
        <item>ECE</item>
        <item>EEE</item>
    </string-array>
    <string-array name="campusUploadYearArray">
        <item>Select Year</item>
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
        <item>Fourth</item>
    </string-array>
    <string-array name="campusUploadSecArray">
        <item>Select Section</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
    </string-array>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
</resources>