<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_gpa"
        android:title="@string/nav_section_1"
        android:icon="@drawable/ic_gpa_calculator"/>

    <item android:title="@string/nav_section_2">
        <menu>
            <item
                android:id="@+id/nav_attendance"
                android:icon="@drawable/ic_attendance_white"
                android:title="@string/nav_attendance" />
            <item
                android:id="@+id/nav_campus_news"
                android:icon="@drawable/ic_campus_news_white"
                android:title="@string/nav_campus_news" />
            <item
                android:id="@+id/nav_planner"
                android:icon="@drawable/ic_univ_news_white"
                android:title="@string/nav_erp" />
            <item
                android:id="@+id/nav_notes"
                android:icon="@drawable/ic_notes_white"
                android:title="@string/nav_notes" />
            <item
                android:id="@+id/nav_univ_news"
                android:icon="@drawable/ic_univ_news_white"
                android:title="@string/nav_univ_news" />
        </menu>
    </item>

    <item android:title="General">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:title="Profile"
                android:icon="@drawable/ic_attendance_white"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_account_circle_black_36dp"
                android:title="@string/nav_logout" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/nav_settings" />
        </menu>
    </item>

    <item android:title="@string/nav_section_3">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_help_feedback" />
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_dialog_info"
                android:title="@string/nav_about" />
        </menu>
    </item>
</menu>
