<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:scrollbars="vertical"
    tools:context=".ux.UploadNotesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Select Subject: "
            android:textColor="#000000"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinner_subjects"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:scrollbarSize="12dp" />

        <Spinner
            android:id="@+id/spinner_chapters"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:scrollbarSize="12dp" />


        <LinearLayout
            android:id="@+id/layout_storage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin"
                android:text="@string/take_photo_prompt"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera_button_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="@string/label_download" />

            <Button
                android:id="@+id/button_download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/download" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
